[package]
name = "raster-fonts"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"], optional = true }
image = { version = "0.24.5", optional = true }
rkyv = { version = "0.7", optional = true }
ron = { version = "0.8.0", optional = true }
rusttype = { version = "0.9.3", optional = true }
serde = { version = "1.0.151", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
serde-serialize = ["serde"]
serde-deserialize = ["serde"]
rkyv-serialize = ["rkyv"]
rkyv-deserialize = ["rkyv"]
bin = ["clap", "image", "ron", "rusttype", "serde-serialize", "serde_json", "rkyv-serialize"]

[lib]
name = "raster_fonts"
path = "src/lib.rs"

[[bin]]
name = "font2png"
path = "src/main.rs"
required-features = ["bin"]
