[package]
name = "raster-fonts"
version = "0.1.1"
edition = "2021"
authors = ["Tristan Dannenberg"]
description = "Bitmap font creation tool and accompanying metadata deserialization library"
categories = ["command-line-utilities", "game-development", "graphics", "rendering"]
keywords = ["gamedev", "graphics", "text-rendering"]
repository = "https://github.com/teryror/raster-fonts"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0.29", features = ["derive"], optional = true }
image = { version = "0.24.5", optional = true }
rkyv = { version = "0.7", optional = true }
ron = { version = "0.8.0", optional = true }
rusttype = { version = "0.9.3", optional = true }
serde = { version = "1.0.151", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
serde-serialize = ["serde"]
serde-deserialize = ["serde"]
rkyv-serialize = ["rkyv"]
rkyv-deserialize = ["rkyv"]
bin = ["clap", "image", "ron", "rusttype", "serde-serialize", "serde_json", "rkyv-serialize"]

[lib]
name = "raster_fonts"
path = "src/lib.rs"

[[bin]]
name = "font2img"
path = "src/main.rs"
required-features = ["bin"]

[package.metadata.docs.rs]
features = ["serde-deserialize", "rkyv-deserialize"]
rustdoc-args = ["--cfg", "docs_rs"]